/*
 *  Copyright Â© 2023 Paravela Limited
 *
 *  Licensed under the Apache License, Version 2.0 (the "License");
 *  you may not use this file except in compliance with the License.
 *  You may obtain a copy of the License at
 *
 *       http://www.apache.org/licenses/LICENSE-2.0
 *
 *  Unless required by applicable law or agreed to in writing, software
 *  distributed under the License is distributed on an "AS IS" BASIS,
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *  See the License for the specific language governing permissions and
 *  limitations under the License.
 */
syntax = "proto3";

option java_multiple_files = true;
package com.blockchaintp.daml.protobuf;
import "google/protobuf/timestamp.proto";

message DamlOperationBatch {
  string version = 1;
  repeated DamlOperation operations = 2;
}

/**
* This is the legacy DamlOperation for daml-on-sawtooth
*/
message DamlOperationDOSLegacy {
  string version = 1;
  oneof payload {
    DamlTransaction transaction = 2;
    DamlTransactionFragment largeTransaction = 5;
  };
  string submittingParticipant = 3;
  string correlationId = 4;
}

/**
* This is the legacy DamlOperation for daml-on-besu
*/
message DamlOperationDOBLegacy {
  string version = 1;
  oneof payload {
    DamlTransaction transaction = 2;
    TimeKeeperUpdate timeUpdate = 4;
  };
  string submittingParticipant = 3;
  string correlationId = 5;
}

/**
* New generation DamlOperations
*/
message DamlOperation {
  string version = 1;
  oneof payload {
    DamlTransaction transaction = 2;
    DamlTransactionFragment largeTransaction = 5;
    TimeKeeperUpdate timeUpdate = 6;
  };
  string submittingParticipant = 3;
  string correlationId = 4;
}

message DamlTransaction {
  string version = 1;
  bytes logEntryId = 2;
  bytes submission = 3;
}

message DamlTransactionFragment {
  string version = 1;
  bytes logEntryId = 2;
  int32 parts = 3;
  int32 partNumber = 4;
  bytes submissionFragment = 5;
  string contentHash = 6;
}

message DamlLogEvent {
  string version = 1;
  bytes logEntryId = 2;
  bytes logEntry = 3;
  bytes timeUpdate = 4;
}

message TimeKeeperUpdate {
  string version = 1;
  google.protobuf.Timestamp timeUpdate = 2;
}

message DamlACL {
  string version = 1;
  bool public = 2;
  repeated string participantId = 3;
}

message ByteStringPair {
  string version = 1;
  bytes key = 2;
  bytes value = 3;
}

message ByteStringPairList {
  string version = 1;
  repeated ByteStringPair pairs = 2;
}
